faster grayscale testing